# tensorzero

./: .gitignore  CONTRIBUTING_CN.md  Cargo.toml  README_CN.md  docker-compose.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: devv_prd.txt  prd.txt  ui_i18n_prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
ci/: README_cn.md
clients/: README_cn.md
clients/openai-go/: README_cn.md
clients/openai-node/: README_cn.md
clients/python/: README_cn.md
config/: QUICK_START.md  env-check.sh  readme_cn.md  tensorzero-rustproxy-env.toml  tensorzero.toml  verify-config.sh
docs/api/: openapi.yaml
evaluations/: README_cn.md
examples/evaluations/tutorial/: README_cn.md
examples/quickstart/: PROVIDER_CONFIG_README.md  RUSTPROXY_CONFIG_README.md  docker-compose-openrouter.yml
examples/quickstart/config/: tensorzero-openrouter.toml  tensorzero-rustproxy.toml
examples/tutorial/: README_cn.md
gateway/src/: main.rs
optimization-server/: README_cn.md
provider-proxy/: README_cn.md
recipes/dicl/: README_cn.md
recipes/dpo/openai/: README_cn.md
recipes/mipro/: README_cn.md
rust-proxy-core/: Cargo.toml  sign_bg.wasm
rust-proxy-core/src/: dev_client.rs  lib.rs  models.rs  sse_processor.rs  utils.rs  wasm_signer.rs
tensorzero-internal/: Cargo.toml
tensorzero-internal/src/: embeddings.rs  model.rs
tensorzero-internal/src/endpoints/: embeddings.rs  mod.rs  models.rs
tensorzero-internal/tests/e2e/: embeddings.rs  tensorzero.toml  tests.rs
ui/: README_cn.md
ui/fixtures/: README_cn.md
(+13 files in other folders)
