[package]
name = "rust-proxy-core"
edition = "2024"
version.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["stream", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasmtime = "18.0"
uuid = { workspace = true, features = ["v4", "serde"] }
sha2 = "0.10"
futures-util = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
hex = "0.4"
once_cell = "1.19"
http = { workspace = true }
bytes = "1.6.0"
anyhow = { workspace = true }

[lints]
workspace = true
